outerr
src/screens/GameScreen.cpp:14:2: error: initializer '_hud' does not name a non-static data member or base class; did you mean the member 'hud'?
        _hud(this->hud),
        ^~~~
        hud
includes/screens/GameScreen.hpp:25:10: note: 'hud' declared here
        WINDOW* hud;
                ^
src/screens/GameScreen.cpp:14:2: error: multiple initializations given for non-static member 'hud'
        _hud(this->hud),
        ^~~~~~~~~~~~~~~
src/screens/GameScreen.cpp:7:2: note: previous initialization is here
        hud(subwin(stdscr, HUD_HEIGHT, COLS, 0, 0)),
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/screens/GameScreen.cpp:104:59: warning: format string is not a string literal (potentially insecure) [-Wformat-security]
        mvwprintw(this->hud, 1, COLS - score.str().length() - 1, score.str().c_str());
                                                                 ^~~~~~~~~~~~~~~~~~~
src/screens/GameScreen.cpp:104:59: note: treat the string as an argument to avoid this
        mvwprintw(this->hud, 1, COLS - score.str().length() - 1, score.str().c_str());
                                                                 ^
                                                                 "%s", 
1 warning and 2 errors generated.
make: *** [Makefile:40: .obj/screens/GameScreen.o] Error 1
